--- a/index.html
+++ b/index.html
@@ -30,40 +30,13 @@ BVB removed the background here and added it to the body (see index.css)-->
 
 
 
-<div id="shrimp" style="z-index: 1;">
-  <div class="shrimp" id="shrimp1" style="position: absolute; top: 134px; left: 170px;  z-index: 5; transform: rotate(10deg);"><img style="width: 250px; height: auto;" src="images/shrimp/shrimp1.jpg"></a></div>
-  <div class="shrimp" id="shrimp2" style="position: absolute; top: 25px; left: 316px; z-index: 2; transform: rotate(2deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp2.jpg"></a></div>
-  <div class="shrimp" id="shrimp3" style="position: absolute; top: 12px; left: 13px; z-index: 4; transform: rotate(-15deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp3.jpg"></a></div>
-  <div class="shrimp" id="shrimp4" style="position: absolute; top: 53px; left: 510px; z-index: 3; transform: rotate(10deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp4.jpg"></a></div>
-  <div class="shrimp" id="shrimp5" style="position: absolute; top: 334px; left: 910px;  z-index: 5; transform: rotate(10deg);"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp5.jpg"></a></div>
-  <div class="shrimp" id="shrimp6" style="position: absolute; top: 165px; left: 1216px; z-index: 2; transform: rotate(-5deg)"><img style="width: 250px; height: auto;" src="images/shrimp/shrimp6.jpg"></a></div>
-  <div class="shrimp" id="shrimp7" style="position: absolute; top: 2px; left: 663px; z-index: 4; transform: rotate(-15deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp7.jpg"></a></div>
-  <div class="shrimp" id="shrimp8" style="position: absolute; top: 583px; left: -40px; z-index: 1; transform: rotate(-10deg)"><img style="width: 150px; height: auto;" src="images/shrimp/shrimp8.jpg"></a></div>
-  <div class="shrimp" id="shrimp9" style="position: absolute; top: 564px; left: 310px;  z-index: 1; transform: rotate(0deg);"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp9.jpg"></a></div>
-  <div class="shrimp" id="shrimp10" style="position: absolute; top: 365px; left: 316px; z-index: 2; transform: rotate(-10deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp10.jpg"></a></div>
-  <div class="shrimp" id="shrimp11" style="position: absolute; top: 467px; left: 1083px; z-index: 4; transform: rotate(-15deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp11.jpg"></a></div>
-  <div class="shrimp" id="shrimp12" style="position: absolute; top: 353px; left: 670px; z-index: 3; transform: rotate(0deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp12.jpg"></a></div>
-  <div class="shrimp" id="shrimp13" style="position: absolute; top: 34px; left: 1110px;  z-index: 5; transform: rotate(10deg);"><img style="width: 180px; height: auto;" src="images/shrimp/shrimp13.jpg"></a></div>
-  <div class="shrimp" id="shrimp14" style="position: absolute; top: 195px; left: 916px; z-index: 2; transform: rotate(-10deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp14.jpg"></a></div>
-  <div class="shrimp" id="shrimp15" style="position: absolute; top: 312px; left: 13px; z-index: 4; transform: rotate(5deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp15.jpg"></a></div>
-  <div class="shrimp" id="shrimp16" style="position: absolute; top: 263px; left: 1090px; z-index: 3; transform: rotate(2deg)"><img style="width: 250px; height: auto;" src="images/shrimp/shrimp16.jpg"></a></div>
-  <div class="shrimp" id="shrimp17" style="position: absolute; top: 34px; left: 910px;  z-index: 5; transform: rotate(0deg);"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp17.jpg"></a></div>
-  <div class="shrimp" id="shrimp18" style="position: absolute; top: 175px; left: 766px; z-index: 5; transform: rotate(3deg)"><img style="width: 250px; height: auto;" src="images/shrimp/shrimp18.jpg"></a></div>
-  <div class="shrimp" id="shrimp19" style="position: absolute; top: 582px; left: 113px; z-index: 4; transform: rotate(5deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp19.jpg"></a></div>
-  <div class="shrimp" id="shrimp20" style="position: absolute; top: 283px; left: 470px; z-index: 5; transform: rotate(0deg)"><img style="width: 250px; height: auto;" src="images/shrimp/shrimp20.jpg"></a></div>
-  <div class="shrimp" id="shrimp21" style="position: absolute; top: -120px; left: 1210px; z-index: 5; transform: rotate(-10deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp21.jpg"></a></div>
-  <div class="shrimp" id="shrimp22" style="position: absolute; top: 553px; left: 910px; z-index: 3; transform: rotate(10deg)"><img style="width: 200px; height: auto;" src="images/shrimp/shrimp22.jpg"></a></div>
-  <div class="shrimp" id="shrimp23" style="position: absolute; top: 493px; left: 570px; z-index: 3; transform: rotate(-5deg)"><img style="width: 250px; height: auto;" src="images/shrimp/shrimp23.jpg"></a></div>
-  <div class="shrimp" id="shrimp24" style="position: absolute; top: 493px; left: 1200px; z-index: 5; transform: rotate(-5deg)"><img style="width: 250px; height: auto;" src="images/shrimp/shrimp24.jpg"></a></div>
-</div>
-
 <a name="home"></a>
 <div class="article" id="body-Home">
   <div class="Home">
     <!-- <img src="images/home-02.svg"/> -->
   </div>
   <h1 style="width: 100%;text-align:center; margin-top:80px; margin-left:0px;">The <span class="italic">Shadow</span> of Thai Shrimp Industry: Slavery</h1>
-  <p style="width: 100%;text-align:center; margin-left:0px;line-height: 20pt; margin-bottom:30px; font-size: 29pt; weight:regular;">Are slaves peeling the shrimp you buy?</p>
+  <h2 style="width: 100%;text-align:center; margin-left:0px;line-height: 20pt; margin-bottom:30px; font-size: 29pt; weight:regular;">Are slaves peeling the shrimp you buy?</p>
   <p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">...............</p>
 
 
