--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ BVB removed the background here and added it to the body (see index.css)-->
 
 <div class="photo">
   <img src="images/slaves.png" />
-  <img style="top:800px; left:700px;" src="images/slaves3.png" />
+  <img style="top:800px; left:45vw;" src="images/slaves3.png" />
   <img style="top:810px; left:10px;" src="images/slaves2.png" />
 </div>
 
