--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ BVB removed the background here and added it to the body (see index.css)-->
               <br><p>CP said in a statement that it believed the right thing was to use its commercial weight to try to influence the Thai government to act rather than walk away from the Thai fishing industry, although it is putting in place plans to use alternative proteins in its feed so that it can eliminate Thai fishmeal by 2021 if necessary. It said it had already tightened controls over the way its fishmeal is procured. While it recognises that workers on boats are exploited, it added that the Thai department of fisheries continues to deny that unregistered boats are a problem. "We can do nothing, and witness these social and environmental issues destroy the seas around Thailand, or we can help drive improvement plans. We are making good progress," it said.</p>
             </div>
         </div>
-<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">..............................</p>
+<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
 
         <a name="2016"></a>
         <div class="article" id="body-2016-2017">
@@ -157,7 +157,7 @@ BVB removed the background here and added it to the body (see index.css)-->
           </div>
                   </div>
 
-<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">..............................</p>
+<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
 
         <a name="2018"></a>
         <div class ="article" id="body-2018-2019" style="left: 300px;">
@@ -237,15 +237,15 @@ BVB removed the background here and added it to the body (see index.css)-->
           </div>
 
 
-<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">..............................</p>
+<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
 
 
 
 
           <a name="ref"></a>
           <div class="article" id="body-Sources">
-            <h1 style="margin-left:100px; margin-top:20px;">Sources</h1>
-            <p style="width:100vw;"><a href="https://www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour">https://www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour</a>
+            <h1 style="padding-left:100px; margin-top:20px;">Sources</h1>
+            <h4 style="padding-left:100px; width:90%;"><a href="https://www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour">https://www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour</a>
             </p>
           </div>
 
