--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@ BVB removed the background here and added it to the body (see index.css)-->
   <h2 style="width: 100%;text-align:center; margin-left:0px;line-height: 20pt; margin-bottom:30px; font-size: 29pt; weight:regular;">Are slaves peeling the shrimp you buy?</p>
   <p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">...............</p>
 
+  <div class="photo">
+    <img style="top:300px; left:4vw;"src="images/slaves.png" />
+    <img style="top:800px; left:25vw;" src="images/slaves3.png" />
+    <img style="top:1180px; left:40vw;" src="images/slaves2.png" />
+  </div>
 
 </div>
 
 
-<div class="photo">
-  <img style="top:300px; left:4vw;"src="images/slaves.png" />
-  <img style="top:800px; left:25vw;" src="images/slaves3.png" />
-  <img style="top:1180px; left:40vw;" src="images/slaves2.png" />
-</div>
+
 
 
 
@@ -109,7 +110,7 @@ BVB removed the background here and added it to the body (see index.css)-->
               <br><p>CP said in a statement that it believed the right thing was to use its commercial weight to try to influence the Thai government to act rather than walk away from the Thai fishing industry, although it is putting in place plans to use alternative proteins in its feed so that it can eliminate Thai fishmeal by 2021 if necessary. It said it had already tightened controls over the way its fishmeal is procured. While it recognises that workers on boats are exploited, it added that the Thai department of fisheries continues to deny that unregistered boats are a problem. "We can do nothing, and witness these social and environmental issues destroy the seas around Thailand, or we can help drive improvement plans. We are making good progress," it said.</p>
             </div>
         </div>
-<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
+<p style="width: 100%;text-align:center; margin-top:20px; margin-left:0px; margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
 
         <a name="2016"></a>
         <div class="article" id="body-2016-2017">
@@ -157,12 +158,12 @@ BVB removed the background here and added it to the body (see index.css)-->
           </div>
                   </div>
 
-<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
+<p style="width: 100%;text-align:center; margin-top:20px; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
 
         <a name="2018"></a>
         <div class ="article" id="body-2018-2019" style="left: 300px;">
-        <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px;">Thailand’s fishing industry is no longer on European watch list for illegal practices, including human trafficking</h1></button>
-          <div class="content" style="display: none; margin-left:350px;">
+        <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand’s fishing industry is no longer on European watch list for illegal practices, including human trafficking</h1></button>
+          <div class="content" style="display: none; margin-left:350px; ">
             <p>Thailand on Wednesday welcomed a decision by the European Commission to remove the Southeast Asian nation from a list of countries warned over illegal and unregulated fishing.
             <br><p>In 2015, the world’s third-largest exporter of seafood received a “yellow card” – or warning from the European Union over unsustainable fishing practices – carrying the threat of a European ban on the exports. That move prompted a major crackdown by Thailand’s military government on illegal fishing and an overhaul of the industry.</p>
             <br><p>“There have been sacrifices and adjustment to the way fishing was conducted,” said Lieutenant General Werachon Sukondhapatipak, the deputy spokesman of the military government. “Thailand’s fishing industry at all levels has a responsibility to the environment and the world through more sustainable fishing practices in line with international standards.”</p>
@@ -176,7 +177,7 @@ BVB removed the background here and added it to the body (see index.css)-->
             <br />
           </div>
 
-        <button type="button" class="collapsible" style="margin-left:150px;"><h1 style="margin-top:20px;">Thai seafood: are the prawns on your plate still fished by slaves?</h1></button>
+        <button type="button" class="collapsible" style="margin-left:150px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thai seafood: are the prawns on your plate still fished by slaves?</h1></button>
           <div class="content" style="display: none; margin-left:0px;">
             <p>Thailand’s billion-dollar seafood export industry remains infested with human rights abuses despite government pledges to stamp out slavery in its fishing industry, according to research by Human Rights Watch.</p>
             <br><p>Four years after damning revelations of chattel slavery aboard Thai fishing boats linked to seafood exported and sold by major retailers around the world, a report says that rights violations in one of Thailand’s major export industries continue unabated, including forced labour and widespread human trafficking.</p>
@@ -201,7 +202,7 @@ BVB removed the background here and added it to the body (see index.css)-->
             <br><p>“The government of Thailand has given high priority to this and put significant effort into addressing these problems. There are still shortcomings but progress has been made and we are confident of their commitment to improving things,” she said. “We are working intensively at opening up a broader discussion on labour rights that extends past fishing into other sectors.”</p>
           </div>
 
-        <button type="button" class="collapsible" style="margin-left:400px;"><h1 style="margin-top:20px;">The Shrimp Industry's Awful Issue of Slave Labor Continues To Plague It Today</h1></button>
+        <button type="button" class="collapsible" style="margin-left:400px;"><h1 style="margin-top:20px; margin-bottom:50px;">The Shrimp Industry's Awful Issue of Slave Labor Continues To Plague It Today</h1></button>
           <div class="content" style="display: none; margin-left:250px;">
             <p>A few years ago, bombshell investigations from the Associated Press and the Guardian uncovered a severe problem with our shrimp industry: slavery. While it seemed like corrective actions were being taken as a result, some recent follow-ups suggest that forced, unpaid labor is still being utilized to catch and process hordes of shrimp.</p>
             <p><br>According to Dominique Barnes, CEO of plant-based seafood company New Wave Foods, the problem particularly persists in areas of Southeast Asia. "[The region has] these big companies raising shrimp, and this volume is so high, they need people to process it quickly. And so they’ll entice people saying 'Hey, we have jobs for you, come down to our farm, we’ll pay you, you’ll be able to eat,'” she told Foodbeast. "And so people put in all of their resources to get to this farm and then when they get there, they don’t get paid and become slaves to the industry."</p>
@@ -212,7 +213,7 @@ BVB removed the background here and added it to the body (see index.css)-->
             <br><p>"In general, 90 percent of our shrimp is imported from these farms that really have the worst practices," Barnes told Foodbeast, saying that there are "small, small farms" out there that do a decent job when it comes to sustainable and slavery-free shrimp. However, for the most part, the issues of forced labor and poor working conditions that plague Thailand's shrimp industry continue to fester.<p><br />
           </div>
 
-        <button type="button" class="collapsible" style="margin-left:300px;"><h1 style="margin-top:20px;">Thailand needs neighbours’ help to stamp out slavery at sea in its multibillion-dollar fishing industry, says rights activist</h1></button>
+        <button type="button" class="collapsible" style="margin-left:300px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand needs neighbours’ help to stamp out slavery at sea in its multibillion-dollar fishing industry, says rights activist</h1></button>
             <div class="content" style="display: none; margin-left:150px;">
             <p>Thailand’s crackdown on exploitation and slavery in its multibillion-dollar fishing industry will only succeed if its neighbours step up and adopt anti-trafficking laws, according to a labour rights activist and Nobel Peace Prize nominee.</p>
             <br><p>Thai fishing vessels are increasingly registering in nearby countries to avoid scrutiny of their treatment of migrant workers as Thailand boosts its laws on human trafficking, said local campaigner Patima Tungpuchayakul.</p>
@@ -237,7 +238,7 @@ BVB removed the background here and added it to the body (see index.css)-->
           </div>
 
 
-<p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
+<p style="width: 100%;text-align:center; margin-top:20px; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">.......................</p>
 
 
 
