--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ BVB removed the background here and added it to the body (see index.css)-->
   <div class="Home">
     <!-- <img src="images/home-02.svg"/> -->
   </div>
-  <h1 style="width: 100%;text-align:center; margin-top:80px; margin-left:0px;">The <span class="italic">Shadow</span> of Thai Shrimp Industry: Slavery</h1>
-  <h2 style="width: 100%;text-align:center; margin-left:0px;line-height: 20pt; margin-bottom:30px; font-size: 29pt; weight:regular;">Are slaves peeling the shrimp you buy?</p>
+  <h1 style="width: 100%;text-align:center; margin-top:90px; margin-left:0px; font-size: 8vh";>The <span class="italic">Shadow</span> of Thai Shrimp Industry: Slavery</h1>
+  <h2 style="width: 100%;text-align:center; margin-top:10px; margin-left:0px;line-height: 20pt; margin-bottom:30px; font-size: 29pt; weight:regular;">Are slaves peeling the shrimp you buy?</p>
   <p style="width: 100%;text-align:center; margin-left:0px;margin-bottom:50px; letter-spacing: 3rem;font-size: 25pt;">...............</p>
 
   <div class="photo">
