--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ BVB removed the background here and added it to the body (see index.css)-->
 
   <div class="photo">
     <img style="top:300px; left:4vw;"src="images/slaves.png" />
-    <img style="top:800px; left:25vw;" src="images/slaves3.png" />
-    <img style="top:1180px; left:40vw;" src="images/slaves2.png" />
+    <img style="top:800px; left:53vw;" src="images/slaves3.png" />
+    <img style="top:1190px; left:18vw;" src="images/slaves2.png" />
   </div>
 
 </div>
@@ -60,9 +60,9 @@ BVB removed the background here and added it to the body (see index.css)-->
 
 
 
-          <div class = "logo">
+          <!-- <div class = "logo">
             <img src="images/slave-clipart-shackles2.png" alt="Logo">
-          </div>
+          </div> -->
 
 
 
@@ -71,8 +71,8 @@ BVB removed the background here and added it to the body (see index.css)-->
         <!-- mountain content -->
         <a name="2014"></a>
         <div class="article" id="body-2014-2015">
-          <button type="button" class="collapsible"><h1 style="margin-top:-20px;">Revealed: Asian slave labour producing prawns for supermarkets in US, UK</h1></button>
-            <div class="content" style="display: none; margin-left:300px;">
+          <button type="button" class="collapsible"><h1 style="margin-top:20px; margin-left:-200px;">Revealed: Asian slave labour producing prawns for supermarkets in US, UK</h1></button>
+            <div class="content" style="display: none; margin-left:350px;">
               <p>Slaves forced to work for no pay for years at a time under threat of extreme violence are being used in Asia in the production of seafood sold by major US, British and other European retailers, the Guardian can reveal.</p>
               <br><p>A six-month investigation has established that large numbers of men bought and sold like animals and held against their will on fishing boats off Thailand are integral to the production of prawns (commonly called shrimp in the US) sold in leading supermarkets around the world, including the top four global retailers: Walmart, Carrefour, Costco and Tesco.</p>
               <br><p>The investigation found that the world's largest prawn farmer, the Thailand-based Charoen Pokphand (CP) Foods, buys fishmeal, which it feeds to its farmed prawns, from some suppliers that own, operate or buy from fishing boats manned with slaves.</p>
@@ -114,8 +114,8 @@ BVB removed the background here and added it to the body (see index.css)-->
 
         <a name="2016"></a>
         <div class="article" id="body-2016-2017">
-        <button type="button" class="collapsible"><h1 style="margin-top:20px; margin-left:-300px;">Slavery <span class="italic">still</span> a problem in Thai shrimp industry despite scrutiny</h1></button>
-          <div class="content" style="display: none;margin-left:0px;">
+        <button type="button" class="collapsible"><h1 style="margin-top:20px; margin-left:-400px;">Slavery <span class="italic">still</span> a problem in Thai shrimp industry despite scrutiny</h1></button>
+          <div class="content" style="display: none;margin-left:150px;">
             <p>Facing international pressure for failing to stop human trafficking in the seafood trade, Thailand promised almost a year ago to compensate victims of slavery and industry leaders vowed to bring all shrimp processing in-house.</p>
             <br><p>That hasn't always happened. Instead, some formerly enslaved shrimp peelers have been deported. And some shrimp peeling sheds are being inspected and authorized to keep operating.</p>
             <br><p>Tin Nyo Win, who escaped slavery and alerted police to abuses, was deported to Myanmar this month, along with his pregnant wife and a half-dozen others, after being held almost a year in a Thai government shelter. Authorities said that although the couple were victims of modern-day slavery, they had illegally entered Thailand to begin with.</p>
@@ -163,7 +163,7 @@ BVB removed the background here and added it to the body (see index.css)-->
         <a name="2018"></a>
         <div class ="article" id="body-2018-2019" style="left: 300px;">
         <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand’s fishing industry is no longer on European watch list for illegal practices, including human trafficking</h1></button>
-          <div class="content" style="display: none; margin-left:350px; ">
+          <div class="content" style="display: none; margin-left:450px; ">
             <p>Thailand on Wednesday welcomed a decision by the European Commission to remove the Southeast Asian nation from a list of countries warned over illegal and unregulated fishing.
             <br><p>In 2015, the world’s third-largest exporter of seafood received a “yellow card” – or warning from the European Union over unsustainable fishing practices – carrying the threat of a European ban on the exports. That move prompted a major crackdown by Thailand’s military government on illegal fishing and an overhaul of the industry.</p>
             <br><p>“There have been sacrifices and adjustment to the way fishing was conducted,” said Lieutenant General Werachon Sukondhapatipak, the deputy spokesman of the military government. “Thailand’s fishing industry at all levels has a responsibility to the environment and the world through more sustainable fishing practices in line with international standards.”</p>
@@ -178,7 +178,7 @@ BVB removed the background here and added it to the body (see index.css)-->
           </div>
 
         <button type="button" class="collapsible" style="margin-left:150px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thai seafood: are the prawns on your plate still fished by slaves?</h1></button>
-          <div class="content" style="display: none; margin-left:0px;">
+          <div class="content" style="display: none; margin-left:100px;">
             <p>Thailand’s billion-dollar seafood export industry remains infested with human rights abuses despite government pledges to stamp out slavery in its fishing industry, according to research by Human Rights Watch.</p>
             <br><p>Four years after damning revelations of chattel slavery aboard Thai fishing boats linked to seafood exported and sold by major retailers around the world, a report says that rights violations in one of Thailand’s major export industries continue unabated, including forced labour and widespread human trafficking.</p>
             <br><p>For the report HRW conducted interviews with 248 current and former Burmese and Cambodian fishermen as well as Thai officials, boat owners, local activists and United Nations agency staff over a two-year period in all of Thailand’s major fishing ports.</p>
@@ -202,8 +202,8 @@ BVB removed the background here and added it to the body (see index.css)-->
             <br><p>“The government of Thailand has given high priority to this and put significant effort into addressing these problems. There are still shortcomings but progress has been made and we are confident of their commitment to improving things,” she said. “We are working intensively at opening up a broader discussion on labour rights that extends past fishing into other sectors.”</p>
           </div>
 
-        <button type="button" class="collapsible" style="margin-left:400px;"><h1 style="margin-top:20px; margin-bottom:50px;">The Shrimp Industry's Awful Issue of Slave Labor Continues To Plague It Today</h1></button>
-          <div class="content" style="display: none; margin-left:250px;">
+        <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px; margin-bottom:50px;">The Shrimp Industry's Awful Issue of Slave Labor Continues To Plague It Today</h1></button>
+          <div class="content" style="display: none; margin-left:450px;">
             <p>A few years ago, bombshell investigations from the Associated Press and the Guardian uncovered a severe problem with our shrimp industry: slavery. While it seemed like corrective actions were being taken as a result, some recent follow-ups suggest that forced, unpaid labor is still being utilized to catch and process hordes of shrimp.</p>
             <p><br>According to Dominique Barnes, CEO of plant-based seafood company New Wave Foods, the problem particularly persists in areas of Southeast Asia. "[The region has] these big companies raising shrimp, and this volume is so high, they need people to process it quickly. And so they’ll entice people saying 'Hey, we have jobs for you, come down to our farm, we’ll pay you, you’ll be able to eat,'” she told Foodbeast. "And so people put in all of their resources to get to this farm and then when they get there, they don’t get paid and become slaves to the industry."</p>
             <br><p>Once there, reports of confinement, a lack of pay, and even torture of the boat's "employees" was widely found in the original reports. The allegations were so severe that Thailand, the focus of the articles, publicly committed to help free those in slave labor and initiated a series of reforms to prevent it from happening again. Former President Barack Obama even enforced a policy then banning the import of goods produced by slave labor after the AP series was published.</p>
@@ -214,7 +214,7 @@ BVB removed the background here and added it to the body (see index.css)-->
           </div>
 
         <button type="button" class="collapsible" style="margin-left:300px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand needs neighbours’ help to stamp out slavery at sea in its multibillion-dollar fishing industry, says rights activist</h1></button>
-            <div class="content" style="display: none; margin-left:150px;">
+            <div class="content" style="display: none; margin-left:250px;">
             <p>Thailand’s crackdown on exploitation and slavery in its multibillion-dollar fishing industry will only succeed if its neighbours step up and adopt anti-trafficking laws, according to a labour rights activist and Nobel Peace Prize nominee.</p>
             <br><p>Thai fishing vessels are increasingly registering in nearby countries to avoid scrutiny of their treatment of migrant workers as Thailand boosts its laws on human trafficking, said local campaigner Patima Tungpuchayakul.</p>
             <br><p>Unlike Thai boats, foreign vessels are not required to undergo checks by officials when they enter or leave ports in Thailand, said the activist, who featured in a 2018 documentary Ghost Fleet about workers trapped in slavery in the industry.</p>
