--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ BVB removed the background here and added it to the body (see index.css)-->
         <!-- mountain content -->
         <a name="2014"></a>
         <div class="article" id="body-2014-2015">
-          <button type="button" class="collapsible"><h1 style="margin-top:20px; margin-left:-200px;">Revealed: Asian slave labour producing prawns for supermarkets in US, UK</h1></button>
+          <button type="button" class="collapsible"><h1 style="margin-top:20px; margin-left:-200px;">Revealed: Asian slave labour producing prawns for supermarkets in US, UK</h1><sup style="margin-left: -205px;vertical-align: 30px; font-weight: bold;">1</sup></button>
             <div class="content" style="display: none; margin-left:350px;">
               <p>Slaves forced to work for no pay for years at a time under threat of extreme violence are being used in Asia in the production of seafood sold by major US, British and other European retailers, the Guardian can reveal.</p>
               <br><p>A six-month investigation has established that large numbers of men bought and sold like animals and held against their will on fishing boats off Thailand are integral to the production of prawns (commonly called shrimp in the US) sold in leading supermarkets around the world, including the top four global retailers: Walmart, Carrefour, Costco and Tesco.</p>
@@ -114,7 +114,7 @@ BVB removed the background here and added it to the body (see index.css)-->
 
         <a name="2016"></a>
         <div class="article" id="body-2016-2017">
-        <button type="button" class="collapsible"><h1 style="margin-top:20px; margin-left:-400px;">Slavery <span class="italic">still</span> a problem in Thai shrimp industry despite scrutiny</h1></button>
+        <button type="button" class="collapsible"><h1 style="margin-top:20px; margin-left:-400px;">Slavery <span class="italic">still</span> a problem in Thai shrimp industry despite scrutiny</h1><sup style="margin-left: -610px;vertical-align: 20px; font-weight: bold;">2</sup></button>
           <div class="content" style="display: none;margin-left:150px;">
             <p>Facing international pressure for failing to stop human trafficking in the seafood trade, Thailand promised almost a year ago to compensate victims of slavery and industry leaders vowed to bring all shrimp processing in-house.</p>
             <br><p>That hasn't always happened. Instead, some formerly enslaved shrimp peelers have been deported. And some shrimp peeling sheds are being inspected and authorized to keep operating.</p>
@@ -162,7 +162,7 @@ BVB removed the background here and added it to the body (see index.css)-->
 
         <a name="2018"></a>
         <div class ="article" id="body-2018-2019" style="left: 300px;">
-        <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand’s fishing industry is no longer on European watch list for illegal practices, including human trafficking</h1></button>
+        <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand’s fishing industry is no longer on European watch list for illegal practices, including human trafficking</h1><sup style="margin-left: -355px;vertical-align: 24px; font-weight: bold;">3</sup></button>
           <div class="content" style="display: none; margin-left:450px; ">
             <p>Thailand on Wednesday welcomed a decision by the European Commission to remove the Southeast Asian nation from a list of countries warned over illegal and unregulated fishing.
             <br><p>In 2015, the world’s third-largest exporter of seafood received a “yellow card” – or warning from the European Union over unsustainable fishing practices – carrying the threat of a European ban on the exports. That move prompted a major crackdown by Thailand’s military government on illegal fishing and an overhaul of the industry.</p>
@@ -177,7 +177,7 @@ BVB removed the background here and added it to the body (see index.css)-->
             <br />
           </div>
 
-        <button type="button" class="collapsible" style="margin-left:150px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thai seafood: are the prawns on your plate still fished by slaves?</h1></button>
+        <button type="button" class="collapsible" style="margin-left:150px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thai seafood: are the prawns on your plate still fished by slaves?</h1><sup style="margin-left: -19px;vertical-align: 25px; font-weight: bold;">4</sup></button>
           <div class="content" style="display: none; margin-left:100px;">
             <p>Thailand’s billion-dollar seafood export industry remains infested with human rights abuses despite government pledges to stamp out slavery in its fishing industry, according to research by Human Rights Watch.</p>
             <br><p>Four years after damning revelations of chattel slavery aboard Thai fishing boats linked to seafood exported and sold by major retailers around the world, a report says that rights violations in one of Thailand’s major export industries continue unabated, including forced labour and widespread human trafficking.</p>
@@ -202,7 +202,7 @@ BVB removed the background here and added it to the body (see index.css)-->
             <br><p>“The government of Thailand has given high priority to this and put significant effort into addressing these problems. There are still shortcomings but progress has been made and we are confident of their commitment to improving things,” she said. “We are working intensively at opening up a broader discussion on labour rights that extends past fishing into other sectors.”</p>
           </div>
 
-        <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px; margin-bottom:50px;">The Shrimp Industry's Awful Issue of Slave Labor Continues To Plague It Today</h1></button>
+        <button type="button" class="collapsible" style="margin-left:500px;"><h1 style="margin-top:20px; margin-bottom:50px;">The Shrimp Industry's Awful Issue of Slave Labor Continues To Plague It Today</h1><sup style="margin-left: -343px;vertical-align: 25px; font-weight: bold;">5</sup></button>
           <div class="content" style="display: none; margin-left:450px;">
             <p>A few years ago, bombshell investigations from the Associated Press and the Guardian uncovered a severe problem with our shrimp industry: slavery. While it seemed like corrective actions were being taken as a result, some recent follow-ups suggest that forced, unpaid labor is still being utilized to catch and process hordes of shrimp.</p>
             <p><br>According to Dominique Barnes, CEO of plant-based seafood company New Wave Foods, the problem particularly persists in areas of Southeast Asia. "[The region has] these big companies raising shrimp, and this volume is so high, they need people to process it quickly. And so they’ll entice people saying 'Hey, we have jobs for you, come down to our farm, we’ll pay you, you’ll be able to eat,'” she told Foodbeast. "And so people put in all of their resources to get to this farm and then when they get there, they don’t get paid and become slaves to the industry."</p>
@@ -213,7 +213,7 @@ BVB removed the background here and added it to the body (see index.css)-->
             <br><p>"In general, 90 percent of our shrimp is imported from these farms that really have the worst practices," Barnes told Foodbeast, saying that there are "small, small farms" out there that do a decent job when it comes to sustainable and slavery-free shrimp. However, for the most part, the issues of forced labor and poor working conditions that plague Thailand's shrimp industry continue to fester.<p><br />
           </div>
 
-        <button type="button" class="collapsible" style="margin-left:300px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand needs neighbours’ help to stamp out slavery at sea in its multibillion-dollar fishing industry, says rights activist</h1></button>
+        <button type="button" class="collapsible" style="margin-left:300px;"><h1 style="margin-top:20px; margin-bottom:50px;">Thailand needs neighbours’ help to stamp out slavery at sea in its multibillion-dollar fishing industry, says rights activist</h1><sup style="margin-left: -96px;vertical-align: 25px; font-weight: bold;">6</sup></button>
             <div class="content" style="display: none; margin-left:250px;">
             <p>Thailand’s crackdown on exploitation and slavery in its multibillion-dollar fishing industry will only succeed if its neighbours step up and adopt anti-trafficking laws, according to a labour rights activist and Nobel Peace Prize nominee.</p>
             <br><p>Thai fishing vessels are increasingly registering in nearby countries to avoid scrutiny of their treatment of migrant workers as Thailand boosts its laws on human trafficking, said local campaigner Patima Tungpuchayakul.</p>
@@ -245,9 +245,13 @@ BVB removed the background here and added it to the body (see index.css)-->
 
           <a name="ref"></a>
           <div class="article" id="body-Sources">
-            <h1 style="padding-left:100px; margin-top:20px;">Sources</h1>
-            <h4 style="padding-left:100px; width:90%;"><a href="https://www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour">https://www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour</a>
-            </p>
+            <h1 style="padding-left:80px; margin-top:20px;">Sources</h1>
+            <h4 style="padding-left:100px; width:100%; margin-bottom:8px;"><sup style="vertical-align: 8px;">1  </sup><a href="https://www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour">www.theguardian.com/global-development/2014/jun/10/supermarket-prawns-thailand-produced-slave-labour</a>
+            <h4 style="padding-left:100px; width:100%; margin-bottom:8px;"><sup style="vertical-align: 8px;">2  </sup><a href="https://www.cbc.ca/news/business/slavery-thailand-shrimp-1.3775668">www.cbc.ca/news/business/slavery-thailand-shrimp-1.3775668</a>
+            <h4 style="padding-left:100px; width:100%; margin-bottom:8px;"><sup style="vertical-align: 8px;">3  </sup><a href="https://www.scmp.com/news/asia/southeast-asia/article/2181350/thailands-fishing-industry-no-longer-european-watch-list">www.scmp.com/news/asia/southeast-asia/article/2181350/thailands-fishing-industry-no-longer-european-watch-list</a>
+            <h4 style="padding-left:100px; width:100%; margin-bottom:8px;"><sup style="vertical-align: 8px;">4  </sup><a href="https://www.theguardian.com/global-development/2018/jan/23/thai-seafood-industry-report-trafficking-rights-abuses">www.theguardian.com/global-development/2018/jan/23/thai-seafood-industry-report-trafficking-rights-abuses</a>
+            <h4 style="padding-left:100px; width:100%; margin-bottom:8px;"><sup style="vertical-align: 8px;">5  </sup><a href="https://www.foodbeast.com/news/shrimp-industry-slavery-2018/">www.foodbeast.com/news/shrimp-industry-slavery-2018/</a>
+            <h4 style="padding-left:100px; width:100%; margin-bottom:80px;"><sup style="vertical-align: 8px;">6  </sup><a href="https://www.scmp.com/news/asia/southeast-asia/article/3013235/thailand-needs-neighbours-help-stamp-out-slavery-sea-its">www.scmp.com/news/asia/southeast-asia/article/3013235/thailand-needs-neighbours-help-stamp-out-slavery-sea-its</a>
           </div>
 
   <!-- <img style="z-index: -10;" id="floating-banner" src="images/slaves.png" /> -->
